<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.example.ganeshtikone.kotlincalculator.CalculatorActivity">

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/editTextOperand1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:hint="@string/operand_1"
        android:inputType="number"
        android:textAlignment="textEnd" />


    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/editTextOperand2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:hint="@string/operand_2"
        android:inputType="number"
        android:textAlignment="textEnd" />


    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/textViewTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:text="@string/_00"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/buttonAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_40dp"
        android:text="@string/add"
        android:textSize="20sp" />


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/buttonSubtract"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subtract"
        android:textSize="20sp" />


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/buttonMultiply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/multiply"
        android:textSize="20sp" />


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/buttonDivision"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/division"
        android:textSize="20sp" />


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/buttonClear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:textSize="20sp" />

</LinearLayout>
